# OpenGLProject

./: .gitignore  Makefile  addToPathAndRun.bat  compile_glfw3.4.bat  compile_glfw3.4.sh  glad.c  horloge.blend  main.cpp  meson.build  plan.fs
Include/: callbacks.hpp  functions.h  functions.hpp  render.hpp
Include/OpenGlTools/: stb_image.h
Include/glad/: glad.h
Include/rustlib/: main.hpp
Include/tools/: camera.h  camera.hpp  gltfloader.hpp  model.h  object.hpp  shader.h  shader.hpp
c++_src/: main.cpp
c++_src/libs/: functions.cpp
c++_src/libs/tools/: gltfloader.cpp  gltfloader.cpp.sav  model.cpp  shader.cpp
lib/: functions.cpp
res/: cube.glb
res/blender_models/: aiguille.blend
res/models/: aiguille.glb  horloge.glb  light_bulb.glb  test-model.glb
res/shaders/Plan/: plan.fs  plan.vs
res/shaders/glbModel/: fragment.fs  vertex.vs
res/shaders/pbr/: depth.vs  pbr.fs  pbr.vs
res/shaders/plan/: plan.fs  plan.vs
rustsrc/: lib.rs
shaders/Plan/: plan.fs
src/: callbacks.cpp  main.cpp  render.cpp
src/libs/tools/: gltfloader.cpp  model.cpp
src/tools/: camera.cpp  gltfloader.cpp  object.cpp  shader.cpp
subprojects/: tinygltf.wrap
